--- a/PycharmProjects/pilatesclub/cms/members/templates/members/base.html
+++ b/PycharmProjects/pilatesclub/cms/members/templates/members/base.html
@@ -55,8 +55,15 @@
         <a class="nav-link" href="{% url 'vocab' %}"> Vocab </a>
       </li>
                                       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'apimemberlist' %}"> [API] </a>
+        <a class="nav-link" href="{% url 'apimemberlist' %}"> [API]
+        </a>
       </li>
+
+                                              <li class="nav-item active">
+        <a class="nav-link" href="{% url 'javacore' %}"> [javacore]
+        </a>
+      </li>
+
 
 
 
