--- a/PycharmProjects/pilatesclub/cms/members/templates/members/xjavacore.html
+++ b/PycharmProjects/pilatesclub/cms/members/templates/members/xjavacore.html
@@ -1,73 +1,7 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends 'members/base.html' %}
 
+{% block content %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Word Champ</title>
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-        <a class="nav-link" href="{% url 'base' %}">Home <span class="sr-only">(current)</span></a>
-      </li>
-
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'add_member' %}">Add<span class="sr-only">(current)</span></a>
-      </li>
-
-
-
-            <li class="nav-item active">
-        <a class="nav-link" href="{% url 'operations' %}">Sales</a>
-      </li>
-
-                  <li class="nav-item active">
-        <a class="nav-link" href="{% url 'lessons' %}">Lessons</a>
-      </li>
-
-                        <li class="nav-item active">
-        <a class="nav-link" href="{% url 'search' %}"> Search </a>
-      </li>
-                              <li class="nav-item active">
-        <a class="nav-link" href="{% url 'vocab' %}"> Vocab </a>
-      </li>
-
-        <li class="nav-item active"><a class="nav-link" href="http://127.0.0.1:8000/generateword/3"> Generate </a>
-      </li>
-
-            <li class="nav-item active">
-        <a class="nav-link" href="http://127.0.0.1:8000/admin/">[Admin]</a>
-      </li>
-
-    </ul>
-            <span style="color:white">Hola, USER </span>
-      <span><a class="nav-link" href="">Logout</a></span>
-
-     <a class="nav-link" href="{% url 'search' %}">
-            <button class="btn btn-outline-warning" type="submit">Search</button></a>
-
-
-  </div>
-</nav>
   <br>
   <div class="container">
       <div class="card text-center" style="width:800px; margin: auto;">
@@ -276,4 +210,6 @@
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</html>
+
+
+        {% endblock %}
